--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <p class="contact-desp">If you have a project that you want to get started, think you need my help <br>
             with something or just fancy saying hey, then get in touch.
           </p>
-          <a class="btn" href="mailto:gandechamanan2002@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:gandechamanan2002@gmail.com">CONTACT ME</a>
         </div>
     </div>
   </section>
