--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <section id="top-section">
-    <nav class="navbar navbar-expand-md sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
         <a href="index.html">
           <img src="images/avatar.png" class="avatar" alt="avatar-img">
