--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h1>I'm Manan.</h1>
       <h2 class="role" style="font-weight: normal;">a web developer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="clound-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
   </section>
 
